# Excel_interview

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  tools.py
backend/app/api/routes/: realtime.py
backend/app/core/: config.py
backend/app/db/: __init__.py  mongo.py
backend/app/models/: tools.py
backend/app/services/: __init__.py  difficulty.py  memory.py  orchestrator.py  storage.py
backend/app/services/graders/: __init__.py  formula.py  objective.py  rubric.py
docs/: agentic_architecture.md  project_delivery.md  realtime_testing.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: ChatPane.tsx  FeedbackCard.tsx  QuestionCard.tsx  RatingPanel.tsx  SessionHeader.tsx  StatusBanner.tsx
frontend/src/hooks/: useRealtimeInterview.ts
frontend/src/lib/: realtimeClient.ts
