[tool.poetry]
name = "agentic-interview-backend"
version = "0.1.0"
description = "Agentic interview platform backend services."
authors = ["Your Team <team@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
redis = "^5.0.3"
motor = "^3.4.0"
pydantic-settings = "^2.2.1"
boto3 = "^1.34.79"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
weasyprint = "^61.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
